# ToRNAdoFold

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy-pages.yml
src/: energy.h  fold.h  fold_simd.h  kernel_bench.cpp  main.cpp  params.h  t2004.h  tornadofold.h  verify.cpp
tests/: smoke_test.py
tests/data/: archiveii_smoke.tsv
util/: accuracy.py  gen_t2004.py
web/: fold-worker.js  fold_wasm.cpp  index.html  tornadofold-worker.js  tornadofold_wasm.cpp
